# estimated_ratio

./: .gitconfig  README.md  case.py  pyproject.toml  requeriments.txt
