[project]
name = "case-beanalytic"
version = "0.1.0"
description = ""
authors = [
    {name = "Victor Zucchetti"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl (>=3.1.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pmdarima (>=2.0.4,<3.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
